New test method

--- a/src/test/java/html/index.html
+++ b/src/test/java/html/index.html
@@ -6,19 +6,24 @@
 </head>
 <body>
 <div>
+<div >
+    
+</div>
+<div>
     Natures' first  green is gold,
     Her hardset hue to hold.
     Her early leaf's a flower,
   <span> But only so an hour.</span>
 
     <button id="sumBtn">SUM</button>
-    <input type="number" id="operand1">
-    <span>+</span>
-    <input type="number" id="operand2">
+        <input type="number" id="operand1">
+        <span>+</span>
+        <input type="number" id="operand2">
 
-    <span>=</span>
-    <span id="result"></span>
+        <span>=</span>
+        <span id="result"></span>
 
+    </div>
 </div>
 <script>
     let operand1  = document.querySelector('#operand1');
